--- a/public/assets/css/login_history.css
+++ b/public/assets/css/login_history.css
@@ -73,7 +73,7 @@ a {
     background-color: #a168fe;
   }
   #bg {
-    background-image: url('{{ asset("assets/img/mobile.png") }}');
+    background-image: url('assets/img/mobile.png');
     height: 300px;
     background-size: 400px;
     background-position: 0px 70px;
@@ -467,4 +467,40 @@ a {
 .appBottomMenu.bg-light .item:before,
 .appBottomMenu.bg-dark .item:before {
   display: none;
+}
+
+.badge {
+  font-size: 12px;
+  line-height: 1em;
+  border-radius: 100px;
+  letter-spacing: 0;
+  height: 22px;
+  min-width: 22px;
+  padding: 0 6px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  margin-left: 600px;
+}
+
+.badge-danger,
+a.badge-danger {
+  background: #ec4433 !important;
+}
+
+.gradasigreen {
+  color: white;
+  background-image: linear-gradient(to bottom right, rgba(21, 189, 74, 1), rgba(21, 189, 74, 0.8));
+}
+
+.date-history {
+  margin-left: 5px;
+}
+.border-history {
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #0e1c36;
+  border-bottom: 1px solid #99e7ff;
+  margin-top: 10px;
 }
