--- a/public/assets/css/login_history.css
+++ b/public/assets/css/login_history.css
@@ -73,7 +73,7 @@ a {
         background-color: #a168fe;
     }
     #bg {
-        background-image: url("assets/img/mobile.png");
+        background-image: url("/assets/img/mobile.png");
         height: 300px;
         background-size: 400px;
         background-position: 0px 70px;
