--- a/public/assets/css/style-dashboard.css
+++ b/public/assets/css/style-dashboard.css
@@ -1,226 +1,226 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 body {
-  background-color: #f0f4f9;
-  font-family: "Montserrat", sans-serif;
-  overflow: scroll;
+    background-color: #f0f4f9;
+    font-family: "Montserrat", sans-serif;
+    overflow: scroll;
 }
 
 .background {
-  width: 100%;
-  height: 200px;
-  background-color: #9663fe;
+    width: 100%;
+    height: 200px;
+    background-color: #9663fe;
 }
 
 .main {
-  height: 1000px;
+    height: 1000px;
 }
 
 .content {
-  width: 100%;
+    width: 100%;
 }
 
 a:link {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 a:active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 a {
-  color: white;
+    color: white;
 }
 
 .appeal {
-  width: 100%;
-  height: 185px;
-  color: #9663fe;
+    width: 100%;
+    height: 185px;
+    color: #9663fe;
 }
 
 .reminder {
-  width: 200px;
-  height: 100%;
-  font-size: medium;
+    width: 200px;
+    height: 100%;
+    font-size: medium;
 }
 
 .status {
-  width: 49%;
-  height: 90px;
+    width: 49%;
+    height: 90px;
 }
 
 .small-font {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .medium-font {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .purple {
-  color: #9663fe;
+    color: #9663fe;
 }
 
 .info-container {
-  height: 75px;
+    height: 75px;
 }
 
 .information {
-  width: 90%;
+    width: 90%;
 }
 
 .days {
-  font-size: 10px;
-  color: #747474;
+    font-size: 10px;
+    color: #747474;
 }
 
 .bottom-bar {
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 65px;
-  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.175);
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 65px;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.175);
 }
 
 .menu-text {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 .menu {
-  width: 100px;
-  height: 100%;
+    width: 100px;
+    height: 100%;
 }
 
 .selected {
-  color: #9663fe;
-  font-weight: bolder;
+    color: #9663fe !important;
+    font-weight: bolder;
 }
 
 .bottom-bar > a:link {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .bottom-bar > a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .bottom-bar > a:hover {
-  text-decoration: none;
-  font-weight: bold;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .bottom-bar > a:active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .bottom-bar > a {
-  color: black;
+    color: black;
 }
 
 .dropbtn {
-  background-color: #9663fe;
-  color: white;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    background-color: #9663fe;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .dropbtn:hover,
 .dropbtn:focus {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  max-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    max-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 .dropdown a:hover {
-  background-color: #ddd;
+    background-color: #ddd;
 }
 
 .show {
-  display: block;
+    display: block;
 }
 
 @media only screen and (max-width: 576px) {
-  .appeal {
-    margin: 100px 25px 0 25px;
-    width: 87.5%;
-    padding-bottom: 15px;
-  }
+    .appeal {
+        margin: 100px 25px 0 25px;
+        width: 87.5%;
+        padding-bottom: 15px;
+    }
 
-  .background {
-    width: 100%;
-    height: 100px;
-    background-color: #9663fe;
-  }
+    .background {
+        width: 100%;
+        height: 100px;
+        background-color: #9663fe;
+    }
 
-  .reminder {
-    font-size: 12px;
-  }
+    .reminder {
+        font-size: 12px;
+    }
 
-  .small-font {
-    font-size: 12px;
-  }
+    .small-font {
+        font-size: 12px;
+    }
 
-  .medium-font {
-    font-size: 18px;
-  }
+    .medium-font {
+        font-size: 18px;
+    }
 
-  .status {
-    width: 45%;
-  }
+    .status {
+        width: 45%;
+    }
 
-  .status-container {
-    padding: 0 25px;
-  }
+    .status-container {
+        padding: 0 25px;
+    }
 
-  .subtitle {
-    margin: 0 25px;
-  }
+    .subtitle {
+        margin: 0 25px;
+    }
 
-  .info-row {
-    margin: 0 25px;
-  }
+    .info-row {
+        margin: 0 25px;
+    }
 
-  .info-text {
-    font-size: 5px;
-  }
+    .info-text {
+        font-size: 5px;
+    }
 
-  .bottom-bar {
-    position: sticky;
-    bottom: 0;
-  }
+    .bottom-bar {
+        position: sticky;
+        bottom: 0;
+    }
 
-  .appBottomMenu{
-    position: sticky;
-    bottom: 0;
-  }
+    .appBottomMenu {
+        position: sticky;
+        bottom: 0;
+    }
 }
