--- a/public/assets/css/login_history.css
+++ b/public/assets/css/login_history.css
@@ -608,6 +608,87 @@ li:nth-child(n + 2) {
     word-wrap: break-all;
 }
 
-.container-fluid p {
-    word-break: break-all; /* Memecah kata-kata yang melebihi batas container */
+.btn-unduh {
+    width: 100%;
+}
+
+span.badge.badge1.bg-success {
+    font-size: 15px;
+    height: 100%;
+    font-weight: 600;
+}
+
+button.btn.btn-primary.btn-unduh {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 20px;
+}
+
+.rectangle-alasan {
+    background-color: #2073fe;
+    font-weight: 600;
+    font-size: 15px;
+    color: white;
+    max-width: 1500px;
+    display: flex;
+    border-radius: 7px;
+    margin-bottom: 15px;
+}
+
+.margin1 {
+    margin-left: 150px;
+}
+
+@media only screen and (max-width: 576px) {
+    .margin1 {
+        margin-left: 30px;
+    }
+    .date-izin {
+        margin-top: 100px;
+    }
+
+    .text-keterangan {
+        min-width: 10%;
+    }
+
+    .content-izin {
+        max-width: 98%;
+        word-wrap: break-all;
+    }
+
+    .btn-unduh {
+        width: 100%;
+    }
+
+    span.badge.badge1.bg-success {
+        font-size: 15px;
+        height: 100%;
+        font-weight: 600;
+    }
+
+    button.btn.btn-primary.btn-unduh {
+        text-align: center;
+        vertical-align: middle;
+        line-height: 15px;
+        font-size: 14px;
+    }
+
+    .rectangle-alasan {
+        background-color: #2073fe;
+        font-weight: 400;
+        font-size: 13px;
+        color: white;
+        width: 100%;
+        display: flex;
+        border-radius: 10px;
+        margin-bottom: 15px;
+    }
+
+    .rectangle-alasan p {
+        margin: 0;
+        padding: 5px 5px 5px 5px;
+    }
+    .font-size1 {
+        font-size: 14px;
+    }
 }
