--- a/public/assets/css/login_history.css
+++ b/public/assets/css/login_history.css
@@ -10,11 +10,6 @@
     background-position: 650px -1px;
     overflow-y: hidden;
 }
-/* 
-.form-control {
-    height: 50px;
-    width: -20px;
-} */
 .container-judul {
     height: 30px;
     width: 1000px;
@@ -608,35 +603,36 @@ li:nth-child(n + 2) {
     word-wrap: break-all;
 }
 
+.content-izin1 {
+    max-width: 80%;
+}
+
 .btn-unduh {
     width: 100%;
 }
 
-span.badge.badge1.bg-success {
-    font-size: 15px;
-    height: 100%;
+.ket {
+    background-color: red;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-size: 11px;
     font-weight: 600;
+    border-radius: 5px;
+    padding: 5px 5px 5px 5px;
+    display: inline-flex;
+    justify-content: end;
+}
+
+span.badge.badge1.bg-success {
+    font-size: 10px;
+    height: 100%;
+    font-weight: 400;
 }
 
 button.btn.btn-primary.btn-unduh {
     text-align: center;
     vertical-align: middle;
     line-height: 20px;
-}
-
-.rectangle-alasan {
-    background-color: #2073fe;
-    font-weight: 600;
-    font-size: 15px;
-    color: white;
-    max-width: 1500px;
-    display: flex;
-    border-radius: 7px;
-    margin-bottom: 15px;
-}
-
-.margin1 {
-    margin-left: 150px;
 }
 
 @media only screen and (max-width: 576px) {
