--- a/public/assets/css/login_history.css
+++ b/public/assets/css/login_history.css
@@ -635,6 +635,10 @@ button.btn.btn-primary.btn-unduh {
     line-height: 20px;
 }
 
+/* Tambahkan kelas khusus untuk tombol Anda */
+.custom {
+    background-color: red;
+}
 @media only screen and (max-width: 576px) {
     .margin1 {
         margin-left: 30px;
